fixed typewriter nowrap

--- a/public/style.css
+++ b/public/style.css
@@ -75,7 +75,7 @@ button:hover {
 .typewriter h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid transparent; /* The typwriter cursor */
-  white-space: normal; /* Keeps the content on a single line */
+  white-space: nowrap ; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
